--- a/_css/layout.css
+++ b/_css/layout.css
@@ -80,7 +80,7 @@ header {
 .banner {
     display: grid;
     grid-template-columns: 1fr 1fr;
-
+    justify-content: space-around;
 }
 
 .banner h2 {
@@ -147,13 +147,14 @@ header {
     background-color: var(--gray-soft);
     font-size: 24px;
     color:var(--gray-font);
-    border: .5px solid var(--gray-background);
+    border: 0;
+    outline: none;
     border-radius: 5px;
-    cursor: pointer;
+   
 }
 .order div.search i {
     right: 88%;
-    top: 82%;
+    top: 72%;
     position: absolute;
     
 }
@@ -174,7 +175,7 @@ div.option {
 /* ================ SECTION BURGERS ==================*/
 .burgers{
     
-    width: 65%;
+    max-width: 65%;
     margin: 0 auto;
 }
 
@@ -200,6 +201,7 @@ div.option {
 .burger-item:hover{
     border: 1px solid white;
 }
+
 .top{
     width: 100%;
     height: 50%;
