--- a/_css/typography.css
+++ b/_css/typography.css
@@ -25,7 +25,7 @@ header li a:hover {
 
 .order-btn a {
     border-radius: 5px;
-    border: 1px solid #FFF;
+    border: .4px solid #FFF;
     text-align: center;
     font-style: normal;
     font-weight: 600;
